Queued wheel events should not use ScopedInputScaleDisabler.

Since WebMouseWheelEvents returned by BrowserPlugin are sent to the
guest's RenderWidgetHostImpl, which queues them and (may) send them
later, they should have the device_scale_factor explicitly removed, as
RenderWidgetHostImpl/InputRouterImpl may re-add it before sending.

BUG=601875
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2164673002
Cr-Commit-Position: refs/heads/master@{#406417}

Former-commit-id: 288a99fe15afb1dfefbe253aaa3a5de3c249d866